--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="main">
         <h1>Виберіть курс</h1>
         <div id="courses">
-            <!-- Courses will be loaded here dynamically -->
+            <!-- Courses will be loaded here -->
         </div>
     </div>
     <script src="script.js"></script>
